margin, color, and some more styles added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./assets/CSS/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./assets/CSS/style.css">
   <title> S Karimov</title>
 </head>
 
@@ -44,6 +44,9 @@
                 class="fa fa-linkedin" aria-hidden="true"></i></a>
           </li>
         </ul>
+        <br> <br> <br> <br> <br> <br> 
+
+        <hr>
       </div>
       <div id="down-arrow">
         <span><a href="#about"><i class="fa fa-chevron-down" aria-hidden="true"></i></a></span>
@@ -112,7 +115,7 @@
               <h4>Northwestern University Coding Bootcamp <span class="job-title">2019</span></h4>
             </div>
             <div class="card-content">
-              <p>Full Stack Web Development<a class="job-title" href="https://drive.google.com/open?id=1QU7NNlVNDxlbJ3tQH4Len4M-m8rZTsuW">Certificate</a></p>
+              <p>Full Stack Web Development<a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1QU7NNlVNDxlbJ3tQH4Len4M-m8rZTsuW">Certificate</a></p>
             </div>
           </div>
           <!-- ! E & C 2 -->
@@ -121,7 +124,7 @@
               <h4>CSI Computer Systems Institute <span class="job-title">2015-2016</span></h4>
             </div>
             <div class="card-content">
-              <p> AAP Administrative Assistant Professional <a style="float: right;" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2">Certificate</a></p>
+              <p> AAP Administrative Assistant Professional <a style="text-decoration: none;" style="float: right;" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2">Certificate</a></p>
             </div>
           </div>
           <!--! E & C 3 -->
@@ -158,8 +161,8 @@
               <h2> Trivia-Game </h2>
               <p> Trivia-Game randomly created questions to improve brain activity and also gives you funny giphyies for each correct and incorrect answers
               </p>
-              <a href="https://github.com/Sultan94k/TriviaGame">Link to GitHub </a>
-              <a href="https://sultan94k.github.io/TriviaGame/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/TriviaGame">Link to GitHub </a>
+              <a style="text-decoration: none;" href="https://sultan94k.github.io/TriviaGame/">Live demo</a>
             </div>
           </div>
           <!-- Card-2 -->
@@ -170,8 +173,8 @@
             <div class="project-content">
               <h2>Friend Finder</h2>
               <p> Take a quick survey to find your friend. The user responds to questions with values from 1 "Strongly Disagree" to 5 "Strongly Agree". When the survey is submitted, an existing user record closest to the current user's responses is found and returned. The closest set of user responses is defined as the set with the lowest absolute difference for all ten questions combined.  </p>
-              <a href="https://github.com/Sultan94k/FriendFinder">Link to GitHub</a>
-              <a href="https://friendsultan.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/FriendFinder">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://friendsultan.herokuapp.com/">Live demo</a>
             </div>
           </div>
           <!--Card-3-->
@@ -182,8 +185,8 @@
                 <div class="project-content">
                   <h2>Clicky Game</h2>
                   <p> This is a memory game built with React.js The goal of the game is simple, using your mouse, click each of the twelve Cartoon character cards in whatever order you chose - the order does not matter, only that you do not click the same card twice!  </p>
-              <a href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
-              <a href="https://salty-island-17838.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/">Live demo</a>
             </div>
           </div>
           <!-- Card-4 -->
@@ -194,8 +197,8 @@
                 <div class="project-content">
                   <h2>Weather-API</h2>
                   <p> Weather-API helps user to check the current weather status and also can search for particular cities for several days.  </p>
-              <a href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
-              <a href="https://salty-island-17838.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/">Live demo</a>
             </div>
           </div>
 
@@ -215,23 +218,23 @@
         </div>
         <div class="content-body">
           <ul class="ul-skills">
-            <li class="li-skills">Javascript</li>
             <li class="li-skills">HTML</li>
             <li class="li-skills">CSS</li>
-            <li class="li-skills">React</li>
+            <li class="li-skills">JavaScript</li>
             <li class="li-skills">Node.js</li>
-            <li class="li-skills">Bootstrap</li>
-            <!-- <li class="li-skills">Webpack</li> -->
+            <li class="li-skills">React</li>
             <li class="li-skills">jQuery</li>
-            <!-- <li class="li-skills">Python</li> -->
-            <!-- <li class="li-skills">Algorithms</li> -->
-            <!-- <li class="li-skills">Data Structures</li> -->
-            <li class="li-skills">mySQL</li>
+            <li class="li-skills">MySQL</li>
             <li class="li-skills">MongoDB</li>
             <li class="li-skills">Mongoose</li>
             <li class="li-skills">Databases</li>
             <li class="li-skills">Data Visualization</li>
             <li class="li-skills">Git and Command Line </li>
+            <li class="li-skills">Bootstrap</li>
+            <!-- <li class="li-skills">Webpack</li> -->
+            <!-- <li class="li-skills">Python</li> -->
+            <!-- <li class="li-skills">Algorithms</li> -->
+            <!-- <li class="li-skills">Data Structures</li> -->
             <!-- <li class="li-skills">Test Environments</li> -->
           </ul>
         </div>
@@ -249,6 +252,16 @@
           <a class="anchor" name="contact"></a>
           <h2 class="white-text">Contact Me</h2>
         </div>
+        <ul class="ul-social">
+          <li class="li-social-links">
+            <a class="social" href="https://github.com/Sultan94k" target="_blank"><i class="fa fa-github"
+                aria-hidden="true"></i></a>
+          </li>
+          <li class="li-social-links">
+            <a class="social" href="https://www.linkedin.com/in/sultanmurat-karimov-67a916189/" target="_blank"><i
+                class="fa fa-linkedin" aria-hidden="true"></i></a>
+          </li>
+        </ul>
         <div class="contact content-body">
           <form method="POST" action="https://formspree.io/sultanmuratkarimov@gmail.com">
             <input type="text" name="_subject" value="Contact request from personal website" />
@@ -257,6 +270,12 @@
             <button type="submit">Send</button>
           </form>
         </div>
+        <div class="actionss">
+          <a class="btn d-none d-md-inline-block" href="mailto:mrikram1989@gmail.com">
+            <i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me </a>
+          <a class="btn" href="https://drive.google.com/file/d/1HonbnlQbzj6jiHbJ5yKMaASdBSTKhRJS/view?usp=sharing">
+             <i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+      </div>
       </div>
       <div class="side-content"></div>
     </div>
@@ -264,15 +283,11 @@
 
     <!-- ! Footer -->
     <div class="row">
-      <div class="side-content"></div>
       <div class="main-content">
-        <div class="content-header">
-        </div>
         <div class="content-body">
           <p>Sultanmurat Karimov 2019</p>
         </div>
       </div>
-      <div class="side-content"></div>
     </div>
     <!-- ? Footer ends here -->
 
