--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </ul>
         <div class="contact content-body">
           <form method="POST" action="https://formspree.io/sultanmuratkarimov@gmail.com">
-            <input type="text" name="_subject" value="Contact request from personal website" />
+            <input class="inputlen" type="text" name="_subject" value="Contact request from personal website" />
             <input type="email" name="_replyto" placeholder="Your email" required>
             <textarea name="message" placeholder="Your message" required></textarea>
             <button type="submit">Send</button>
@@ -282,7 +282,7 @@
     <!--? Contact ends here-->
 
     <!-- ! Footer -->
-    <div class="row">
+    <div class="row-footer">
       <div class="main-content">
         <div class="content-body">
           <p>Sultanmurat Karimov 2019</p>
