--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!--! Header Jumbotron-->
     <div class="jumbotron">
       <div class="jumbotron-text">
+          <!-- <p class="logo-sk">S/K</p> -->
         <h1>Sultanmurat Karimov </h1>
         <p>Full-Stack Web Developer</p>
       </div>
@@ -124,7 +125,7 @@
               <h4>CSI Computer Systems Institute <span class="job-title">2015-2016</span></h4>
             </div>
             <div class="card-content">
-              <p> AAP Administrative Assistant Professional <a style="text-decoration: none;" style="float: right;" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2">Certificate</a></p>
+              <p> AAP Administrative Assistant Professional <a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2">Certificate</a></p>
             </div>
           </div>
           <!--! E & C 3 -->
@@ -284,7 +285,7 @@
     <!-- ! Footer -->
     <div class="row-footer">
       <div class="main-content">
-        <div class="content-body">
+        <div class="footer-body">
           <p>Sultanmurat Karimov 2019</p>
         </div>
       </div>
