new blanks for links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h4>Northwestern University Coding Bootcamp <span class="job-title">2019</span></h4>
             </div>
             <div class="card-content">
-              <p>Full Stack Web Development<a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1QU7NNlVNDxlbJ3tQH4Len4M-m8rZTsuW">Certificate</a></p>
+              <p>Full Stack Web Development<a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1QU7NNlVNDxlbJ3tQH4Len4M-m8rZTsuW" target="_blank">Certificate</a></p>
             </div>
           </div>
           <!-- ! E & C 2 -->
@@ -125,7 +125,7 @@
               <h4>CSI Computer Systems Institute <span class="job-title">2015-2016</span></h4>
             </div>
             <div class="card-content">
-              <p> AAP Administrative Assistant Professional <a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2">Certificate</a></p>
+              <p> AAP Administrative Assistant Professional <a style="text-decoration: none;" class="job-title" href="https://drive.google.com/open?id=1Zv1_owpLs7_D1XpFtuwZ_xP0d6T1hsi2" target="_blank">Certificate</a></p>
             </div>
           </div>
           <!--! E & C 3 -->
@@ -162,8 +162,8 @@
               <h2> Trivia-Game </h2>
               <p> Trivia-Game randomly created questions to improve brain activity and also gives you funny giphyies for each correct and incorrect answers
               </p>
-              <a style="text-decoration: none;" href="https://github.com/Sultan94k/TriviaGame">Link to GitHub </a>
-              <a style="text-decoration: none;" href="https://sultan94k.github.io/TriviaGame/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/TriviaGame" target="_blank">Link to GitHub </a>
+              <a style="text-decoration: none;" href="https://sultan94k.github.io/TriviaGame/" target="_blank">Live demo</a>
             </div>
           </div>
           <!-- Card-2 -->
@@ -174,8 +174,8 @@
             <div class="project-content">
               <h2>Friend Finder</h2>
               <p> Take a quick survey to find your friend. The user responds to questions with values from 1 "Strongly Disagree" to 5 "Strongly Agree". When the survey is submitted, an existing user record closest to the current user's responses is found and returned. The closest set of user responses is defined as the set with the lowest absolute difference for all ten questions combined.  </p>
-              <a style="text-decoration: none;" href="https://github.com/Sultan94k/FriendFinder">Link to GitHub</a>
-              <a style="text-decoration: none;" href="https://friendsultan.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/FriendFinder" target="_blank">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://friendsultan.herokuapp.com/" target="_blank">Live demo</a>
             </div>
           </div>
           <!--Card-3-->
@@ -186,8 +186,8 @@
                 <div class="project-content">
                   <h2>Clicky Game</h2>
                   <p> This is a memory game built with React.js The goal of the game is simple, using your mouse, click each of the twelve Cartoon character cards in whatever order you chose - the order does not matter, only that you do not click the same card twice!  </p>
-              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
-              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game" target="_blank">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/" target="_blank">Live demo</a>
             </div>
           </div>
           <!-- Card-4 -->
@@ -198,8 +198,8 @@
                 <div class="project-content">
                   <h2>Weather-API</h2>
                   <p> Weather-API helps user to check the current weather status and also can search for particular cities for several days.  </p>
-              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game">Link to GitHub</a>
-              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game" target="_blank">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/" target="_blank">Live demo</a>
             </div>
           </div>
 
@@ -272,9 +272,9 @@
           </form>
         </div>
         <div class="actionss">
-          <a class="btn d-none d-md-inline-block" href="mailto:mrikram1989@gmail.com">
+          <a class="btn d-none d-md-inline-block" href="mailto:mrikram1989@gmail.com" target="_blank">
             <i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me </a>
-          <a class="btn" href="https://drive.google.com/file/d/1HonbnlQbzj6jiHbJ5yKMaASdBSTKhRJS/view?usp=sharing">
+          <a class="btn" href="https://drive.google.com/file/d/1HonbnlQbzj6jiHbJ5yKMaASdBSTKhRJS/view?usp=sharing" target="_blank">
              <i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
       </div>
       </div>
