added background picture

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <!-- Card-1 -->
           <div class="project-card">
             <div class="project-image">
-              <img style="width: auto; height: 330px;" src="./assets/IMGS/trivia 2.png">
+              <img style="width: auto; height: 330px;" src="./assets/images/trivia 2.png">
             </div>
             <div class="project-content">
               <h2> Trivia-Game </h2>
@@ -169,7 +169,7 @@
           <!-- Card-2 -->
           <div class="project-card">
             <div class="project-image">
-              <img style="width: auto; height: 330px;" src="./assets/IMGS/FriendFinder.png">
+              <img style="width: auto; height: 330px;" src="./assets/images/FriendFinder.png">
             </div>
             <div class="project-content">
               <h2>Friend Finder</h2>
@@ -181,7 +181,7 @@
           <!--Card-3-->
           <div class="project-card">
                 <div class="project-image">
-                  <img style="width: auto; height: 330px;" src="./assets/IMGS/ClickyGame.png">
+                  <img style="width: auto; height: 330px;" src="./assets/images/ClickyGame.png">
                 </div>
                 <div class="project-content">
                   <h2>Clicky Game</h2>
@@ -193,7 +193,7 @@
           <!-- Card-4 -->
           <div class="project-card">
                 <div class="project-image">
-                  <img style="width: auto; height: 330px;" src="./assets/IMGS/weather copy.png">
+                  <img style="width: auto; height: 330px;" src="./assets/images/weather copy.png">
                 </div>
                 <div class="project-content">
                   <h2>Weather-API</h2>
@@ -286,7 +286,7 @@
     <div class="row-footer">
       <div class="main-content">
         <div class="footer-body">
-          <p>Sultanmurat Karimov 2019</p>
+          <p>Sultanmurat Karimov © 2019</p>
         </div>
       </div>
     </div>
