added new blank

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           </li>
         </ul>
         <div class="contact content-body">
-          <form method="POST" action="https://formspree.io/sultanmuratkarimov@gmail.com">
+          <form method="POST" action="https://formspree.io/sultanmuratkarimov@gmail.com" target="_blank">
             <input class="inputlen" type="text" name="_subject" value="Contact request from personal website" />
             <input type="email" name="_replyto" placeholder="Your email" required>
             <textarea name="message" placeholder="Your message" required></textarea>
