--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
           </form>
         </div>
         <div class="actionss">
-          <a class="btn d-none d-md-inline-block" href="mailto:mrikram1989@gmail.com" target="_blank">
+          <a class="btn d-none d-md-inline-block" href="mailto:sultanmuratkarimov@gmail.com" target="_blank">
             <i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me </a>
-          <a class="btn" href="https://drive.google.com/file/d/1HonbnlQbzj6jiHbJ5yKMaASdBSTKhRJS/view?usp=sharing" target="_blank">
+          <a class="btn" href="" target="_blank">
              <i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
       </div>
       </div>
