--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="./assets/CSS/style.css">
   <title> S Karimov</title>
 </head>
@@ -198,8 +199,8 @@
                 <div class="project-content">
                   <h2>Weather-API</h2>
                   <p> Weather-API helps user to check the current weather status and also can search for particular cities for several days.  </p>
-              <a style="text-decoration: none;" href="https://github.com/Sultan94k/clicky-game" target="_blank">Link to GitHub</a>
-              <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/" target="_blank">Live demo</a>
+              <a style="text-decoration: none;" href="https://github.com/Sultan94k/WeatherAPI" target="_blank">Link to GitHub</a>
+              <a style="text-decoration: none;" href="https://sultan94k.github.io/WeatherAPI/" target="_blank">Live demo</a>
             </div>
           </div>
 
@@ -242,6 +243,8 @@
       </div>
       <div class="side-content"></div>
     </div>
+
+
     <!-- ? Skills end here-->
 
     <!-- ! Contact -->
