--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <h4> KGZ Transport Corp <span class="job-title"> Fleet Manager  2015-2016</span></h4>
             </div>
             <div class="card-content">
-              <p> Provides Deliveries that take goods from one place to another on behalf of a shipper </p>
+              <p> Coordinate and manage inbound/outbound freight of 30+ tractors and drivers, managed utilization of drivers and equipment. Ensure customer satisfaction and optimize on-time delivery, through detailed attention and teamwork. </p>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
             </div>
             <div class="project-content">
               <h2> Trivia-Game </h2>
-              <p> Trivia-Game randomly created questions to improve brain activity and also gives you funny giphyies for each correct and incorrect answers
+              <p> Trivia-Game randomly created questions to improve brain activity and also gives you funny giphyies for each correct and incorrect answers.
               </p>
               <a style="text-decoration: none;" href="https://github.com/Sultan94k/TriviaGame" target="_blank">Link to GitHub </a>
               <a style="text-decoration: none;" href="https://sultan94k.github.io/TriviaGame/" target="_blank">Live demo</a>
