--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a class="anchor" name="experience"></a>
           <h2>Experience</h2>
         </div>
-        <!-- card 1 -->
+        <!--* card 1 -->
         <div class="content-body">
           <div class="card">
             <div class="card-header">
@@ -154,7 +154,7 @@
           <h2>Projects</h2>
         </div>
         <div class="content-body">
-          <!-- Card-1 -->
+          <!--* Card-1 -->
           <div class="project-card">
             <div class="project-image">
               <img style="width: auto; height: 330px;" src="./assets/images/trivia 2.png">
@@ -167,7 +167,7 @@
               <a style="text-decoration: none;" href="https://sultan94k.github.io/TriviaGame/" target="_blank">Live demo</a>
             </div>
           </div>
-          <!-- Card-2 -->
+          <!--* Card-2 -->
           <div class="project-card">
             <div class="project-image">
               <img style="width: auto; height: 330px;" src="./assets/images/FriendFinder.png">
@@ -179,7 +179,7 @@
               <a style="text-decoration: none;" href="https://friendsultan.herokuapp.com/" target="_blank">Live demo</a>
             </div>
           </div>
-          <!--Card-3-->
+          <!--* Card-3-->
           <div class="project-card">
                 <div class="project-image">
                   <img style="width: auto; height: 330px;" src="./assets/images/ClickyGame.png">
@@ -191,7 +191,7 @@
               <a style="text-decoration: none;" href="https://salty-island-17838.herokuapp.com/" target="_blank">Live demo</a>
             </div>
           </div>
-          <!-- Card-4 -->
+          <!--* Card-4 -->
           <div class="project-card">
                 <div class="project-image">
                   <img style="width: auto; height: 330px;" src="./assets/images/weather copy.png">
