--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="actionss">
           <a class="btn d-none d-md-inline-block" href="mailto:sultanmuratkarimov@gmail.com" target="_blank">
             <i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me </a>
-          <a class="btn" href="" target="_blank">
+          <a class="btn" href="https://drive.google.com/open?id=1VK7diiWPsV78Q8Jx_3I0LHZaxx5A3qfX" target="_blank">
              <i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
       </div>
       </div>
